Added reducers for manageCoursesList, adEditCourse, addCourseForm, courses, ratingReviews, meeting, attendance, etc. Updated related files to optimize component re-renders.